--- a/test-compose.yaml
+++ b/test-compose.yaml
@@ -1,3 +1,18 @@
+version: '3.8'
+
 services:
- image: rabbitmq
- 
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"       # RabbitMQ client connections
+      - "15672:15672"     # Management UI
+    environment:
+      RABBITMQ_DEFAULT_USER: user
+      RABBITMQ_DEFAULT_PASS: password
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    restart: unless-stopped
+
+volumes:
+  rabbitmq_data:
